# apt_real_estate

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  dbt-requirements.txt  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: dbt_naver_land_complex_info_dag.py  dbt_rtms_svc_apt_trade_dag.py  naver_land_complex_info_dag.py  network_connectivity_dag.py  rtms_svc_apt_trade_dag.py  slack_alert_test_dag.py
dags/dbt/dbt_real_estate/: .user.yml  dbt_project.yml  profiles.yml
dags/dbt/dbt_real_estate/macros/: parse_valid_date.sql
dags/dbt/dbt_real_estate/models/mart/: dim_br_recap_title_info.sql  dim_br_title_info.sql  dim_naver_land_complex_info.sql  dim_naver_land_geo_info.sql  dim_stan_regin_cd.sql  dim_stan_regin_cd_gu.sql  fct_apt_trade.sql  fct_apt_trade_detail.sql  schema.yml
dags/dbt/dbt_real_estate/models/staging/: schema.yml  source.yaml  stg_apt_trade.sql  stg_br_recap_title_info.sql  stg_br_title_info.sql  stg_naver_land_complex_info.sql  stg_naver_land_complex_info_detail.sql  stg_naver_land_geo_info.sql  stg_stan_regin_cd.sql
dags/dbt/dbt_real_estate/snapshots/: snapshot_naver_land_complex_info.sql  snapshot_naver_land_complex_info_detail.sql
dags/src/: br_recap_title_Info.py  br_title_info.py  naver_land_complex_info.py  naver_land_complex_info_detail.py  naver_land_geo_info.py  rtms_svc_apt_trade.py  stan_regin_cd.py
dags/src/utils/: __init__.py  const.py  iceberg_rest_client.py  obj_storage_client.py  slack_utils.py  util.py
