[project]
name = "apt-real-estate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astronomer-cosmos>=1.10.0",
    "curl-cffi>=0.11.1",
    "dbt-core>=1.9.4",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.2.2",
    "polars>=1.29.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "xmltodict>=0.14.2",
]
